k8s/kc-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kc-postgres
  namespace: zerotrust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kc-postgres
  template:
    metadata:
      labels:
        app: kc-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: kc-postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: kc-postgres
  namespace: zerotrust
spec:
  selector:
    app: kc-postgres
  ports:
    - port: 5432
      targetPort: 5432
